# tsengine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: clang-format-check.yml  cmake.yml  msvc-code-analysis.yml
assets/shaders/: common.h  diffuse.frag  diffuse.vert  grid.frag  grid.h  grid.vert  grid_params.h  light_cube.frag  light_cube.h  light_cube.vert  normal_lighting.frag  normal_lighting.vert  pbr.frag  pbr.vert  shader.frag  shader.vert
engine/: CMakeLists.txt
engine/include/tsengine/: asset_store.h  core.h  ecs.hpp  event_bus.hpp  logger.h  math.hpp  utils.h  utils.hpp
engine/include/tsengine/ecs/: ecs.h  ecs.hpp
engine/include/tsengine/ecs/components/: asset_component.h  mesh_component.hpp  renderer_component.hpp  rigid_body_component.hpp  transform_component.hpp
engine/include/tsengine/ecs/systems/: movement_system.hpp  render_system.hpp
engine/src/: globals.hpp  internal_utils.h  khronos_utils.cpp  khronos_utils.h  khronos_utils.hpp  pch.h  tests_core_adapter.h  tools.h  utils.hpp
engine/src/core/: asset_store.cpp  context.cpp  context.h  controllers.cpp  controllers.h  core.cpp  data_buffer.cpp  data_buffer.h  game_object.hpp  headset.cpp  headset.h  image_buffer.cpp  image_buffer.h  logger.cpp  mirror_view.cpp  mirror_view.h  pipeline.cpp  pipeline.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h  renderer_process.cpp  renderer_process.h  window.cpp  window.h
engine/src/ecs/: ecs.cpp  movement_system.hpp  render_system.hpp
engine/src/ecs/systems/: movement_system.hpp  render_system.hpp
engine/src/os/win32/: os.cpp  os.h
engine/src/vulkan/: shaders.cpp  shaders.h  shaders_compiler.cpp  shaders_compiler.h  vulkan_functions.cpp  vulkan_functions.h  vulkan_functions.inl  vulkan_loader.cpp  vulkan_loader.h
engine/src/vulkan_tools/: shaders_compiler.cpp  shaders_compiler.h  vulkan_functions.cpp  vulkan_functions.h  vulkan_functions.inl  vulkan_loader.cpp  vulkan_loader.h
engine/tests/: CMakeLists.txt  tester.cpp
game/: CMakeLists.txt  game.cpp  game.h  main.cpp
game/components/: echo_component.hpp  example_component.hpp  rigid_body_component.hpp  transform_component.hpp
game/events/: key_pressed_event.hpp
game/systems/: example_system.hpp  keyboard_system.hpp  movement_system.hpp  render_system.hpp
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/core/: asset_store.cpp  core.cpp
src/engine/include/tsengine/: asset_store.h  core.h  ecs.hpp  event_bus.hpp  math.hpp
src/game/: CMakeLists.txt  main.cpp
src/game/components/: rigid_body_component.hpp  sprite_component.hpp  transform_component.hpp
src/game/events/: key_pressed_event.hpp  key_released_event.hpp
src/game/game/: game.cpp  game.h
src/game/systems/: keyboard_system.hpp  movement_system.hpp  render_system.hpp
tests/: CMakeLists.txt  tester.cpp
