project(${CMAKE_PROJECT_NAME}Engine)

string(TOLOWER ${PROJECT_NAME} LOWERCASE_PROJECT_NAME)

file(GLOB_RECURSE SRC_FILES
    RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    *.cpp
)

file(GLOB_RECURSE H_FILES
    RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    *.h
)

file(GLOB_RECURSE HPP_FILES
    RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    *.hpp
)

add_library(${PROJECT_NAME} STATIC
    ${SRC_FILES}
    ${H_FILES}
    ${HPP_FILES}
)

target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    include
)

target_include_directories(${PROJECT_NAME} INTERFACE
    include
)

target_compile_definitions(${PROJECT_NAME} PRIVATE DATA_PATH="${DATA_PATH}/")

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES
    ${SRC_FILES}
    ${H_FILES}
    ${HPP_FILES}
)

set(OUTPUT_DIR ${CMAKE_BINARY_DIR}/output/${LOWERCASE_PROJECT_NAME}/${BUILD_TYPE})
if(NOT EXISTS ${OUTPUT_DIR})
    file(MAKE_DIRECTORY ${OUTPUT_DIR})
endif()

set_target_properties(${PROJECT_NAME} PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    VS_DEBUGGER_WORKING_DIRECTORY ${OUTPUT_DIR}
)

file(COPY include DESTINATION ${OUTPUT_DIR}/include)
