project(${CMAKE_PROJECT_NAME}Game)

string(TOLOWER ${PROJECT_NAME} LOWERCASE_PROJECT_NAME)

file(GLOB_RECURSE SRC_FILES
    RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    *.cpp
)

file(GLOB_RECURSE H_FILES
    RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    *.h
)

file(GLOB_RECURSE HPP_FILES
    RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    *.hpp
)

add_executable(${PROJECT_NAME}
    ${SRC_FILES}
    ${H_FILES}
    ${HPP_FILES}
)

target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(${PROJECT_NAME} PRIVATE
    TSEngine
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES
    ${SRC_FILES}
    ${H_FILES}
    ${HPP_FILES}
)

set(OUTPUT_DIR ${CMAKE_BINARY_DIR}/output/${LOWERCASE_PROJECT_NAME}/${BUILD_TYPE})
if(NOT EXISTS ${OUTPUT_DIR})
    file(MAKE_DIRECTORY ${OUTPUT_DIR})
endif()

set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
    VS_DEBUGGER_WORKING_DIRECTORY ${OUTPUT_DIR}
)

# TODO: consider what should be copied
# file(GLOB_RECURSE EXTERNAL_DLL_FILES
#     *.dll
# )

# file(COPY ${DATA_PATH} DESTINATION ${OUTPUT_DIR})
# file(COPY ${EXTERNAL_DLL_FILES} DESTINATION ${OUTPUT_DIR})
